tests/baselines/reference/fatarrowfunctionsOptionalArgsErrors1.errors.txt
==== tests/cases/compiler/fatarrowfunctionsOptionalArgsErrors1.ts (1 errors) ====
    (arg1?, arg2) => 101;
    (...arg?) => 102;
    (...arg) => 103;
    (...arg:number [] = []) => 104;
    (...) => 105;
        ~
!!! fatarrowfunctionsOptionalArgsErrors1.ts(5,5): error TS1003: Identifier expected.
    
    // Non optional parameter following an optional one
    (arg1 = 1, arg2) => 1; 